new tabs based config
